--- a/vue-manage/package.json
+++ b/vue-manage/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.15.9",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0"
   },
