--- a/vueManagementBackend/requirements.txt
+++ b/vueManagementBackend/requirements.txt
@@ -3,11 +3,13 @@ astroid==2.11.7
 backports.zoneinfo==0.2.1
 dill==0.3.5.1
 Django==4.1
+djangorestframework==3.13.1
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 platformdirs==2.5.2
 pylint==2.14.5
+pytz==2022.2.1
 sqlparse==0.4.2
 tomli==2.0.1
 tomlkit==0.11.3
