--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "element-plus": "^2.2.16",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
