--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "element-plus": "^2.2.16",
+    "less": "^4.1.3",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
