--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -11,7 +11,9 @@
     "element-plus": "^2.2.16",
     "less": "^4.1.3",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-demi": "^0.13.11",
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
