--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "axios": "^0.27.2",
     "element-plus": "^2.2.16",
     "less": "^4.1.3",
+    "mockjs": "^1.1.0",
     "vue": "^3.2.38",
     "vue-demi": "^0.13.11",
     "vue-router": "^4.1.5",
