--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.16",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
