--- a/vue3-manage/package.json
+++ b/vue3-manage/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.16",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "vue": "^3.2.38",
