--- a/vue3-notes/package.json
+++ b/vue3-notes/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.18",
     "less": "^4.1.3",
     "vue": "^3.2.38",
