--- a/vue3-notes/package.json
+++ b/vue3-notes/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.1.3",
     "element-plus": "^2.2.18",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
